# mimir

./: .env.example  .gitignore  AUDIT_PREP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCTION_READINESS.md  README.md  ROADMAP.md  SECURITY.md  architecture.md  demo.py  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_clarification.md
.github/workflows/: tests.yml
anchor/: DEPLOY.md  README.md  compile.js  foundry.toml  package.json
anchor/contracts/: EigenLayerSlasherAdapter.sol  IEigenLayer.sol  MimirValidationRegistry.sol  MimirValidationRegistry.t.sol  MockAllocationManager.sol  MockServiceManager.sol  MockSlasher.sol
anchor/go/: anchor.go  (+6 more)
bench/: bench.go  concurrency_test.go  go.mod  go.sum  payloads.go
docs/: LAUNCH.md  RUNBOOK.md  audit-outreach.md  deployments.md  getting-started.md  hardening-roadmap.md  integrate-claude-desktop.md  stack-decision.md
issuer/: Dockerfile  Makefile  README.md  dpop_integration_test.go  go.mod  go.sum  issuer_test.go  kms_integration_test.go  main.go
scoring/: Dockerfile  Makefile  README.md  package-lock.json  package.json  tsconfig.json
scripts/: etherscan-verify.py  gen-sbom.sh  probe-rpcs.py  rotate-key.py  verify-build.sh  verify_build.py
spec/: build-pdf.py  index.mdx  sentence-audit.py
spec/reference-impl-rust/: Cargo.toml
spec/reference-impl-rust/fixtures/: envelope.json  jwk.json
spec/reference-impl-rust/src/: lib.rs  main.rs
spec/reference-impl-rust/tests/: integration.rs
(+138 files in other folders)
